--- a/src/main/Frontend/src/scss/default.scss
+++ b/src/main/Frontend/src/scss/default.scss
@@ -7,9 +7,11 @@ $SextiaryColor: #694BDB;
 $SeventiaryColor: #2BEBC8;
 $OctaryColor: #FF7777;
 $NonaryColor: #C4C4C4;
+
 *{
     margin: 0;
     padding: 0;
+    font-family: &font-family;
 
 
 }
