styling in progress

--- a/src/main/Frontend/src/assets/sass/_variables.scss
+++ b/src/main/Frontend/src/assets/sass/_variables.scss
@@ -10,7 +10,7 @@ $OctaryColor: #FF7777;
 $NonaryColor: #C4C4C4;
 $SidebarColor: #F2EAE1;
 $TableColor: #FFFFFF;
-
+$thColor: #ACACAC;
 *{
     margin: 0;
     padding: 0;
